finished all tasks

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
@@ -9,7 +10,7 @@
 <body>
     <header>
      <nav>
-         <a href="#">Home</a>
+         <a class="active" href="#">Home</a>
          <span></span>
          <a class="bordered" href="#">About</a>
          <span></span> 
